tools/rescue-usb/recipe/build_into_srm/etc/iptables/iptables.rules
# SystemRescue's default rule set, plus SSH from private address ranges.
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-N LOGDROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp --dport 22 -s 10.0.0.0/8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp --dport 22 -s 172.16.0.0/12 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp --dport 22 -s 192.168.0.0/16 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -j LOGDROP
-A LOGDROP -m limit --limit 10/sec -j LOG --log-prefix "iptables-dropped: "
-A LOGDROP -j DROP
COMMIT
